kubernetes/apps/sgc/home/iptv-proxy/middleware.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/traefik.io/middleware_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-tivi-files
spec:
  addPrefix:
    prefix: /tivi-results/
